--- a/roles/frontend/templates/expense.conf.j2
+++ b/roles/frontend/templates/expense.conf.j2
@@ -1,6 +1,7 @@
 proxy_http_version 1.1;
 
-location /api/ { proxy_pass http://{{ BACKEND_HOST }}/; }
+location /api/ { proxy_pass http://{{ BACKEND_HOST }}/; 
+}
 
 location /health {
   stub_status on;
