--- a/roles/frontend/templates/expense.conf.j2
+++ b/roles/frontend/templates/expense.conf.j2
@@ -1,8 +1,3 @@
-proxy_http_version 1.1;
-
-location /api/ { proxy_pass http://{{ BACKEND_HOST }}/; }
-
-location /health {
-  stub_status on;
-  access_log off;
+location /api/ {
+  proxy_pass http://{{ BACKEND_HOST }}/;
 }
